--- a/views/signin_form.jade
+++ b/views/signin_form.jade
@@ -3,8 +3,8 @@
 	p#profile-name.profile-name-card
 	form.form-signin(action='/login',method='post')
 		span#reauth-email.reauth-email
-		input#username.form-control(name="username",type='email', placeholder='CSIRO Email', required='', autofocus='')
-		input#password.form-control(name="password",type='password', placeholder='Password', required='')
+		input.form-control(name="username",type='email', placeholder='CSIRO Email', required='', autofocus='')
+		input.form-control(name="password",type='password', placeholder='Password', required='')
 		#remember.checkbox
 			label
 				input(type='checkbox', value='remember-me')
