--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 /*
  * Specific styles of signin component
  */
+ 
+.navbar{
+     margin-bottom: 0px;
+ }
+ 
 /*
  * General styles
  */
@@ -21,6 +26,7 @@ body, html {
     padding: 40px 40px;
 }
 
+/*
 .btn {
     font-weight: 700;
     height: 36px;
@@ -29,7 +35,7 @@ body, html {
     user-select: none;
     cursor: default;
 }
-
+*/
 /*
  * Card component
  */
