--- a/views/error.jade
+++ b/views/error.jade
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-    .container(style='margin-top: 50px;')
-        = error
+        include ./snippets/warning.jade
+ 
