--- a/views/workflow/workflows.jade
+++ b/views/workflow/workflows.jade
@@ -19,6 +19,14 @@ append content
 									a(href='/workflow/#{workflow.workflowid}') #{workflow.title}
 								td #{workflow.description}
 								td #{workflow.updated_at}
+			// each workflow in workflows
+			// 	.col-sm-4
+			// 		.card.card-block
+			// 			h3.card-title 
+			// 				a(href='/workflow/#{workflow.workflowid}') #{workflow.title}
+			// 			p.card-text
+			// 				small #{workflow.description}
+			// 				small #{workflow.updated_at}
 
 		else
 			.row
