--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,11 +36,6 @@ html(lang="en")
 
 					nav
 						ul.nav.nav-pills.pull-right
-							li.active(role='presentation')
-								a(href='#') Home
-							li(role='presentation')
-								a(href='#') About
-
 							unless isSigninForm
 								if user
 									li.dropdown(role='presentation')
@@ -68,9 +63,19 @@ html(lang="en")
 											strong.caret
 										.dropdown-menu.pull-right.login-dropdown(style='padding: 0px; padding-bottom: 0px;')
 												include ./signin_form.jade
+		block second_header
+				.card.card-inverse.card-success
+					nav.navbar
+						nav
+							ul.nav.navbar-nav.navbar-left
+								li
+									a(href='#') Workflow Document
+
+							form.navbar-form.navbar-right
+								input.form-control(type='text', placeholder='Search...')
 		block content
-			block 	main_nav_header
+			block	main_nav_header
 
 		block footer
 			hr
-			p © CSIRO CLW 2016
+			p.pull-right © CSIRO CLW 2016
