--- a/views/workflow/edit.jade
+++ b/views/workflow/edit.jade
@@ -51,7 +51,7 @@ block main_nav_header
 				a(href='#') Edit		
 
 block primary-actionbar
-	.col-md-12(style='margin-top: 10px')
+	.container
 		.btn-toolbar
 			button#DeleteBtn.btn.btn-danger.pull-left(data-toggle='modal', data-target='#confirm-delete') Delete
 			button#SaveBtn.btn.btn-success.pull-right Update
