--- a/views/workflow/edit.jade
+++ b/views/workflow/edit.jade
@@ -44,7 +44,7 @@ block main_nav_header
 	div
 		ol.breadcrumb
 			li.breadcrumb-item
-				a(href='/workflow') Workflow
+				a(href='/workflow') Flow
 			li.breadcrumb-item
 				a(href='/workflow/#{workflow.workflowid}') #{workflow.title}
 			li.breadcrumb-item.active
