--- a/views/workflow/new.jade
+++ b/views/workflow/new.jade
@@ -55,7 +55,7 @@ block footer
 block main_nav_header
 		ol.breadcrumb
 			li.breadcrumb-item
-				a(href='/workflow') Workflow
+				a(href='/workflow') Flows
 			li.breadcrumb-item.active
 				a(href='#') New
 
@@ -63,7 +63,7 @@ append content
 	#sample
 		ul.nav.nav-tabs
 			li.active
-				a(data-toggle='tab', href='#workflow') Workflow
+				a(data-toggle='tab', href='#workflow') Flow
 			li
 				a(data-toggle='tab', href='#metadata')
 					i.glyphicon.glyphicon-edit 
