--- a/views/workflow/workflows.jade
+++ b/views/workflow/workflows.jade
@@ -44,7 +44,7 @@ append main_nav_header
 	ol.breadcrumb
 		li.breadcrumb-item.active
 			b
-				a(href='/workflow') Workflow
+				a(href='/workflow') My flows
 		li.breadcrumb-item
 			a(href='/workflow/shared') Shared with me
 
