--- a/views/layout.jade
+++ b/views/layout.jade
@@ -69,7 +69,7 @@ html(lang="en")
 						nav
 							ul.nav.navbar-nav.navbar-left
 								li
-									a(href='#') Workflow Document
+									a(href='/') Flow App (Alpha)
 
 							form.navbar-form.navbar-right
 								input.form-control(type='text', placeholder='Search...')
