--- a/views/workflow/read.jade
+++ b/views/workflow/read.jade
@@ -12,13 +12,14 @@ append scripts
 append main_nav_header
     ol.breadcrumb
       li.breadcrumb-item
-        a(href='/workflow') Workflow
+        a(href='/workflow') Flow
       li.breadcrumb-item.active
         a(href='#') #{workflow.title}
 
 append content
         .col-md-2
             h3 #{workflow.title}
+            p #{workflow.creator.displayName}
             p #{workflow.description}
             p 
                 if workflow.is_public
