--- a/views/flow/shared.jade
+++ b/views/flow/shared.jade
@@ -29,11 +29,8 @@ append content
 					.card
 						.card-block(style='margin-left: 10px;margin-right: 10px;margin-bottom: 10px;')
 							img.card-img-top.center-block(src='/images/glass-warning-sign.png', alt='Warning',width='200', height='200')
-							h3.card-title OOPS, seems you do not have any flows!
-							p
-							.card-text 
-								Do you want to create a new flow?  
-								a.btn.btn-success(href='/flow/new') Create
+							h3.card-title OOPS, seems no public flows!
+
 
 block main_nav_header
 	ol.breadcrumb
