coloring and zoomin

--- a/views/index.jade
+++ b/views/index.jade
@@ -7,7 +7,7 @@ block content
 		.container
 			h2 Hello, CLW colleagues!
 			p
-				| This is a flow planning tools for CLW projects
+				| This is a flow planning tool for CLW projects
 			p
 				a.btn.btn-primary.btn-lg(href='#', role='button') Learn more »
 				
